--- a/CapStone/packages.config
+++ b/CapStone/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="LinqToExcel" version="1.11.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net472" />
@@ -19,8 +20,13 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Office.Excel" version="14.0.4760.1000" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net472" />
@@ -33,9 +39,18 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="OfficeOpenXml.Core.ExcelPackage" version="1.0.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="17.3.0.28" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.Compression" version="17.3.0.28" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.XlsIO" version="17.3.0.28" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Data.OleDb" version="4.6.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
