--- a/CapStone/CapStone.csproj
+++ b/CapStone/CapStone.csproj
@@ -288,29 +288,27 @@
     <Compile Include="Controllers\ExportController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImportController.cs" />
+    <Compile Include="Controllers\PharmcyController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="C__MigrationHistory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911212127065_mig.cs" />
-    <Compile Include="Migrations\201911212127065_mig.Designer.cs">
-      <DependentUpon>201911212127065_mig.cs</DependentUpon>
+    <Compile Include="Migrations\201911271943105_intial.cs" />
+    <Compile Include="Migrations\201911271943105_intial.Designer.cs">
+      <DependentUpon>201911271943105_intial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911221622194_mig2.cs" />
-    <Compile Include="Migrations\201911221622194_mig2.Designer.cs">
-      <DependentUpon>201911221622194_mig2.cs</DependentUpon>
+    <Compile Include="Migrations\201911272017512_intia.cs" />
+    <Compile Include="Migrations\201911272017512_intia.Designer.cs">
+      <DependentUpon>201911272017512_intia.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Model1.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BlankWorkSheet.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Pharmacy.cs" />
-    <Compile Include="newPharmacy.cs" />
-    <Compile Include="Pharmacy.cs" />
-    <Compile Include="PharmacyDb.cs" />
+    <Compile Include="Models\PharmacyDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -359,6 +357,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Views\Import\index.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -374,6 +373,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Import\Index.cshtml" />
+    <Content Include="Views\Import\Control.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -409,11 +409,14 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201911212127065_mig.resx">
-      <DependentUpon>201911212127065_mig.cs</DependentUpon>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201911271943105_intial.resx">
+      <DependentUpon>201911271943105_intial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911221622194_mig2.resx">
-      <DependentUpon>201911221622194_mig2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201911272017512_intia.resx">
+      <DependentUpon>201911272017512_intia.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
