--- a/CapStone/packages.config
+++ b/CapStone/packages.config
@@ -23,6 +23,8 @@
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Office.Excel" version="14.0.4760.1000" targetFramework="net472" />
@@ -46,11 +48,13 @@
   <package id="Syncfusion.Xamarin.XlsIO" version="17.3.0.28" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Data.OleDb" version="4.6.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
+  <package id="Twilio" version="5.35.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
