--- a/CapStone/packages.config
+++ b/CapStone/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net472" />
@@ -43,6 +44,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="OfficeOpenXml.Core.ExcelPackage" version="1.0.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="ServiceStack.Text" version="5.8.0" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="17.3.0.28" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.Compression" version="17.3.0.28" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.XlsIO" version="17.3.0.28" targetFramework="net472" />
@@ -51,9 +53,9 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.5.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="Twilio" version="5.35.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
